# vertex-pipelines-boilerplate

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pipeline-run-config.yaml.example  pyproject.toml  pytest.ini
docs/: conf.py  index.rst  reference.rst
src/pipelines/: __init__.py  console.py  pipeline_compiler.py  pipeline_runner.py  sample_pipeline.py  utils.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  test_console.py  test_e2e.py  test_pipeline_compiler.py  test_pipeline_runner.py  test_utils.py
tests/license/: license_check.sh
